# Textractor-TCPSender

./: .gitignore  README.md  TCPSender.sln  meson.build  meson_options.txt
TCPSender/: ExtensionImpl.cpp  TCPSender.cpp  TCPSender.vcxproj  TCPSender.vcxproj.filters  resource.h  resource.rc
mock/: meson.build  mock.cpp
